OrderPlaced Functionality has completed

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "data:import": "node backend/seeder",
-    "data:destroy": "node backend/seeder -d"
+    "data:destroy": "node backend/seeder -d",
+    "data1:import": "node backend/seeder2",
+    "data1:destroy": "node backend/seeder2 -d"
   },
   "keywords": [],
   "author": "",
