--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-image-magnify": "^2.7.4",
     "react-multi-carousel": "^2.8.2",
     "react-paypal-button-v2": "^2.6.3",
